--- a/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/update-ltb/update-ltb.component.scss
+++ b/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/update-ltb/update-ltb.component.scss
@@ -1,5 +1,21 @@
 
 
+.select2-container {
+  width: 250px !important;
+}
+::ng-deep .select2-container .select2-selection--single {
+  height: 45px !important;
+  margin-top: 1%;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+  margin-top: 7px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+  top: 10px;
+}
+
 .gender-category label {
   padding: 0 20px 0 5px;
   font-size: 14px;
