--- a/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
+++ b/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
@@ -11,7 +11,7 @@
                     <img style="height: 5vh;" src="/assets/images/icons/pdf.png" alt="PDF Icon">
                 </div>
             </div>
-            <div class="col-12 col-sm-10 align-items-center justify-content-center responsive-container"
+            <div class="col-12 col-md-10 d-flex align-items-center justify-content-center "
                 style="margin: auto;">
                 <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                 style="max-height: 590px;overflow: scroll;overflow-x: hidden;overflow-y: hidden;" rowAnimation [gridOptions]="gridOptions"
