--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -329,9 +329,14 @@
             <a> <i class="bx bx-building bx-sm icon "></i> Bulk Operation <i
                     class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
-                <li><a (click)="navgetToUrl('/special_bulk_package');setActiveLinkTab($event)"> <i
+                <!-- <li><a (click)="navgetToUrl('/special_bulk_package');setActiveLinkTab($event)"> <i
+                            class='fa fa-fw fa-users  icon'></i> &nbsp; Bulk
+                        Package Updation</a></li> -->
+                <li><a (click)="navgetToUrl('/Bulk_Package_Updation');setActiveLinkTab($event)"> <i
                             class='fa fa-fw fa-users  icon'></i> &nbsp; Bulk
                         Package Updation</a></li>
+
+
                 <!-- <li><a (click)="navgetToUrl('/special_lco_package')" (click)="setActiveTab($event)"><i
                             class='fa fa-fw fa-inr icon'></i> &nbsp;LCO & AREA change</a>
                 </li> -->
