--- a/src/app/admin/features/Service_center_role/service/service.component.scss
+++ b/src/app/admin/features/Service_center_role/service/service.component.scss
@@ -1,5 +1,4 @@
-
-span{
+span {
     font-weight: 600;
 }
 
@@ -18,4 +17,147 @@ span{
 
 ::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
     top: 10px;
+}
+
+.display1 {
+    display: flex;
+}
+
+.display {
+    display: flex;
+}
+
+@media screen and (max-width:560px) {
+
+    .container-fluid {
+        max-height: 650px;
+        overflow: scroll;
+    }
+
+    .display {
+        display: block;
+    }
+}
+
+// ==================================================================================
+#app-cover {
+    display: table;
+    width: 600px;
+    margin: 80px auto;
+    counter-reset: button-counter;
+}
+
+.toggle-button-cover {
+    display: table-cell;
+    position: relative;
+    width: 100px;
+    height: 40px;
+    box-sizing: border-box;
+}
+
+.button {
+    position: relative;
+    top: 50%;
+    width: 74px;
+    height: 36px;
+    margin: -20px auto 0 auto;
+    overflow: hidden;
+}
+
+.button.r,
+.button.r .layer {
+    border-radius: 100px;
+}
+
+.button.b2 {
+    border-radius: 2px;
+}
+
+.checkbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+
+}
+
+.knobs {
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.3s ease all;
+    font-size: 12px;
+    padding: 0 8px;
+}
+
+.layer {
+    width: 100%;
+    background-color: #ebf7fc;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+
+
+#button-10 .knobs:before,
+#button-10 .knobs:after,
+#button-10 .knobs span {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 9px 4px;
+    border-radius: 2px;
+    transition: 0.3s ease all;
+}
+
+#button-10 .knobs:before {
+    content: "";
+    width: 36px;
+    height: 31px;
+    left: 4px;
+    background-color: #216303;
+}
+
+#button-10 .knobs:after {
+    content: "NO";
+    right: 4px;
+    color: #4e4e4e;
+}
+
+#button-10 .knobs span {
+    display: inline-block;
+    color: #fff;
+    z-index: 1;
+    left: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#button-10 .checkbox:checked+.knobs span {
+    color: #4e4e4e;
+}
+
+#button-10 .checkbox:checked+.knobs:before {
+    left: 42px;
+    background-color: #f44336;
+}
+
+#button-10 .checkbox:checked+.knobs:after {
+    color: #fff;
+}
+
+#button-10 .checkbox:checked~.layer {
+    background-color: #fcebeb;
 }
