--- a/src/app/admin/features/channel_setting/_Dialogue/BULK OPERATION/bulkpackageupdation/bulkpackageupdation.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/BULK OPERATION/bulkpackageupdation/bulkpackageupdation.component.html
@@ -122,24 +122,24 @@
             </div>
         </div>
         <div class="row mb-3" style="padding: 1rem;">
-            <div class="col-12 col-sm-6" style="padding: 1rem;">
+            <div class="col-12 col-sm-12" style="padding: 1rem;">
                 <div class="Head1 d-flex justify-content-between align-items-center" style="padding: 1rem;">
                     <h6>CUSTOMER DETAILS</h6>
                 </div>
-                <ag-grid-angular #agGrid  domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
-                    [enableCellTextSelection]="true">
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
+                    style="max-height: 400px;overflow: scroll;" rowAnimation [gridOptions]="gridOptions"
+                    [columnDefs]="columnDefs" [rowData]="rowData" [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
-            <div class="col-12 col-sm-6" style="padding: 1rem;">
+            <!-- <div class="col-12 col-sm-6" style="padding: 1rem;">
                 <div class="Head1 d-flex justify-content-between align-items-center" style="padding: 1rem;">
                     <h6>BILLING DETAILS</h6>
                 </div>
-                <ag-grid-angular #agGrid  domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs1" [rowData]="rowData1"
-                    [enableCellTextSelection]="true">
+                <ag-grid-angular #agGrid domLayout='normal' class="ag-theme-alpine table-class"
+                    style="max-height: 700px;overflow: scroll;" rowAnimation [gridOptions]="gridOptions"
+                    [columnDefs]="columnDefs1" [rowData]="rowData1" [enableCellTextSelection]="true">
                 </ag-grid-angular>
-            </div>
+            </div> -->
         </div>
         <div class=" col-12 col-sm-6  mb-3 mobile2" style="padding: 1rem;">
             <div class="card d-flex justify-content-center align-item-center mb-3 ">
