--- a/src/app/admin/features/inventory_role/Dialogue/inventory-dialogue/inventory-dialogue.component.scss
+++ b/src/app/admin/features/inventory_role/Dialogue/inventory-dialogue/inventory-dialogue.component.scss
@@ -72,3 +72,23 @@
     width: 100%;
     max-width: 200px;
 }
+
+
+::ng-deep .select2-container {
+    width: 250px !important;
+}
+
+::ng-deep .select2-container .select2-selection--single {
+    height: 50px !important;
+    // margin-top: 1%;
+    width: 250px !important;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+    margin-top: 13px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 13px;
+
+}
