--- a/src/app/admin/features/inventory_role/cortonbox/cortonbox.component.html
+++ b/src/app/admin/features/inventory_role/cortonbox/cortonbox.component.html
@@ -1,31 +1,49 @@
 <div class="row justify-content-start align-items-center mb-3">
     <!-- Left-aligned elements -->
-    <div class="col-12 col-md-1 text-center mb-2">
+    <div class="col-12 col-md-1 text-center mb-2" style="margin-top: -1.5%;">
         <button type="submit" (click)="openDialoguePage('corton_box')" class="btn bttn" style="background: #2795abf7">
             <i class="fa-solid fa-upload"></i> &nbsp;Upload
         </button>
     </div>
-    <div class="col-12 col-md-3  mb-2">
-        <select id="model" [(ngModel)]="model" (change)="onModelList($event)" class="form-select">
+    <div class="col-12 col-md-3  mb-2" style="margin-top: -1.5%;">
+        <select id="model" [(ngModel)]="model" (ngModelChange)="onModelList($event)" class="form-select">
             <option value="0" selected>Select Model</option>
-            <option *ngFor="let model of filteredModel" [value]="model.name">{{ model.name }}</option>
+            <option *ngFor="let model of filteredModel" [value]="model.modelname">{{ model.modelname }}</option>
         </select>
     </div>
     <div class="col-12 col-md-3  mb-2">
-        <select id="modelList" [(ngModel)]="model" (change)="onModelList($event)" class="form-select">
-            <option value="0" selected>Select Model</option>
-            <option *ngFor="let model of filteredModel" [value]="model.name">{{ model.name }}</option>
-        </select>
+        <!-- <select id="cortonBoxList" [(ngModel)]="cortonBox" multiple class="form-select">
+            <option *ngFor="let model of cortonBoxList" [value]="model.modelname">{{ model.modelname }}</option>
+        </select> -->
+
+        <!-- <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Select Addon</mat-label>
+            <mat-select [formControl]="toppings" multiple [(ngModel)]="cortonBox" (selectionChange)="onCortonBoxChange(cortonBox)">
+                <mat-option *ngFor="let cortonbox of cortonBoxList" [value]="cortonbox">
+                    {{cortonbox }}</mat-option>
+            </mat-select>
+        </mat-form-field> -->
+
+        <mat-form-field class="w-100" appearance="outline">
+            <mat-label>Select Addon</mat-label>
+            <mat-select [formControl]="toppings" multiple [(ngModel)]="cortonBox" >
+                <mat-option *ngFor="let box of cortonBoxList" [value]="box" (onSelectionChange)="onCortonBoxChange(cortonBoxList)">
+                    {{ box }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        
     </div>
-    <div class="col-12 col-md-1 text-center mb-2">
+    <div class="col-12 col-md-1 text-center mb-2" style="margin-top: -1%;">
         <button type="submit" (click)="submit()" class="btn bttn ">
             Submit
         </button>
     </div>
 
     <!-- ALLOCATED button pushed to the far right -->
-    <div class="col-12 col-md-4 d-flex justify-content-end align-items-center mb-2 ml-auto">
-        <button type="submit" (click)="openDialoguePage('allocatted')" class="btn bttn" style="background-color:#577266">
+    <div class="col-12 col-md-4 d-flex justify-content-end align-items-center mb-2 ml-auto" style="margin-top: -1%;"> 
+        <button type="submit" (click)="openDialoguePage('allocatted')" class="btn bttn"
+            style="background-color:#577266">
             ALLOCATED
         </button>
     </div>
